cmake_minimum_required(VERSION 3.26)
project(tutorial_04_01_framebuffers_and_command_buffers)
add_executable(tutorial_04_01_framebuffers_and_command_buffers main.cpp)

find_package(Vulkan REQUIRED)
find_package(glfw3 REQUIRED)
find_package(unofficial-shaderc CONFIG REQUIRED)
target_link_libraries(tutorial_04_01_framebuffers_and_command_buffers Vulkan::Vulkan)
target_link_libraries(tutorial_04_01_framebuffers_and_command_buffers glfw)
target_link_libraries(tutorial_04_01_framebuffers_and_command_buffers unofficial::shaderc::shaderc)