cmake_minimum_required(VERSION 3.26)
project(tutorial_01_03_pick_physical_device)
add_executable(tutorial_01_03_pick_physical_device main.cpp)

find_package(Vulkan REQUIRED)
find_package(glfw3 REQUIRED)
target_link_libraries(tutorial_01_03_pick_physical_device Vulkan::Vulkan)
target_link_libraries(tutorial_01_03_pick_physical_device glfw)